<resources>
    <string name="app_name">TbcTask5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="next">NEXT</string>
    <string name="username">Username</string>
    <string name="sign_up">sign up</string>
    <string name="by_signing_up_you_agree_to_photo_s_terms_of_service_and_privacy_policy">By signing up, you agree to Photo’s Terms of Service and Privacy Policy.</string>
    <string name="email2">Email</string>
    <string name="password2">Password</string>
    <string name="log_in">Log In</string>
    <string name="line_image">line Image</string>
    <string name="back_sign_image_btn">back Sign Image Btn</string>
    <string name="log_in_image">log In Image</string>
    <string name="register_image">register Image</string>
    <string name="logo_image">logo Image</string>
</resources>