<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SecondRegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/register2Image"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="132dp"
            android:layout_marginEnd="251dp"
            android:contentDescription="@string/register_image"
            android:src="@drawable/ic_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/usernameText"
            android:layout_width="352dp"
            android:layout_height="55dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="18dp"
            android:autofillHints=""
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textColorHint="#546E7A"
            app:layout_constraintBottom_toTopOf="@+id/signUpBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="359dp"
            android:layout_height="54dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="372dp"
            android:background="@drawable/custom_button"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/lineImage2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/lineImage2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="138dp"
            android:layout_marginEnd="138dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/line_image"
            android:src="@drawable/ic_line"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="351dp"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:text="@string/by_signing_up_you_agree_to_photo_s_terms_of_service_and_privacy_policy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpBtn" />


        <ImageButton
            android:id="@+id/registerBackSignBtn2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="365dp"
            android:background="@color/white"
            android:contentDescription="@string/back_sign_image_btn"
            android:src="@drawable/ic_sign"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>