<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LogInFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/logInEmail"
            android:layout_width="352dp"
            android:layout_height="55dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/email2"
            android:inputType="textEmailAddress"
            android:textColorHint="#546E7A"
            app:layout_constraintBottom_toTopOf="@+id/logInPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/logInImage"
            android:layout_width="143dp"
            android:layout_height="36dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="247dp"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/log_in_image"
            android:src="@drawable/ic_login"
            app:layout_constraintBottom_toTopOf="@+id/logInEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/logInPassword"
            android:layout_width="352dp"
            android:layout_height="55dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="24dp"
            android:autofillHints=""
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/password2"
            android:inputType="textPassword"
            android:textColorHint="#546E7A"
            app:layout_constraintBottom_toTopOf="@+id/logInBtn2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/logInBtn2"
            android:layout_width="361dp"
            android:layout_height="52dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="242dp"
            android:background="@drawable/custom_button"
            android:text="@string/log_in"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/lineImage4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/lineImage4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="138dp"
            android:layout_marginEnd="138dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/line_image"
            android:src="@drawable/ic_line"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/registerBackSignBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="365dp"
            android:background="@color/white"
            android:contentDescription="@string/back_sign_image_btn"
            android:src="@drawable/ic_sign"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>