<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/registerEmail"
            android:layout_width="352dp"
            android:layout_height="55dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="53dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="#546E7A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register1Image" />

        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="352dp"
            android:layout_height="55dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="72dp"
            android:autofillHints=""
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#546E7A"
            app:layout_constraintBottom_toTopOf="@+id/registerNextBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerEmail"
            />

        <Button
            android:id="@+id/registerNextBtn"
            android:layout_width="361dp"
            android:layout_height="52dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="199dp"
            android:background="@drawable/custom_button"
            android:text="@string/next"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/lineImage3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/lineImage3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="138dp"
            android:layout_marginEnd="138dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/line_image"
            android:src="@drawable/ic_line"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <ImageView
            android:id="@+id/register1Image"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="176dp"
            android:layout_marginEnd="205dp"
            android:contentDescription="@string/register_image"
            android:src="@drawable/ic_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/registerBackSignBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="365dp"
            android:background="@color/white"
            android:contentDescription="@string/back_sign_image_btn"
            android:src="@drawable/ic_sign"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>